Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1661

Qt Creator determines the executable name incorrectly for different platforms

    XMLWordPrintable

Details

    • 595ee9ff3e0831e0a1a32f19a885f334b624e107

    Description

      I have a project file like this:

      QT += core
      QT += gui
      TARGET = My-App
      TEMPLATE = app
      maemo5:* {
          QT += maemo5
          CONFIG += qdbus
          TARGET = my-app
      }
      

      In this case, Qt Creator still thinks that the name of the executable is "My-App" and not "my-app".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            venemo Timur Kristóf
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes