Maemo: Only save a remote file path if it has been set by the user.

QTCREATORBUG-1661